import UIKit

final class AlerPresenter: AlertPresenterProtocol {
    
    private weak var delegate: AlertPresenterDelegate?
    
    init(delegate: AlertPresenterDelegate) {
        self.delegate = delegate
    }
    
    
    func showAlert (result: AlertModel) {
        let alert = UIAlertController(
            title: result.title,
            message: result.message,
            preferredStyle: .alert)
        let action = UIAlertAction(title: result.buttonText, style: .default) { _ in result.completion() }
        alert.addAction(action)
        alert.view.accessibilityIdentifier = "Game results"
        delegate?.present(alert, animated: true)
    }
}
